--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,9 +11,6 @@
 
     <uses-sdk android:minSdkVersion="29" />
 
-    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
-    <protected-broadcast android:name="com.corvus.parts.CUST_UPDATE" />
-
     <application
         android:label="@string/corvus_parts_title"
         android:supportsRtl="true"
@@ -41,6 +38,7 @@
 
         <activity
             android:name=".kcal.KCalSettingsActivity"
+            android:excludeFromRecents="true"
             android:exported="false"
             android:theme="@style/CustomOptionsTheme"
             android:label="@string/advanced_settings_kcal">
@@ -50,24 +48,17 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.corvus.parts.ambient.SensorsDozeService"
-                 android:permission="SensorsDozeService">
-        </service>
-
+        <!-- Dirac Sounds -->
         <activity
-            android:name=".ambient.AmbientGesturePreferenceActivity"
-            android:icon="@drawable/ic_doze"
+            android:name=".dirac.DiracActivity"
             android:theme="@style/CustomOptionsTheme"
-            android:label="@string/ambient_display_gestures_title">
+            android:excludeFromRecents="true"
+            android:label="@string/dirac_title">
             <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                 <action android:name="android.intent.action.MAIN" />
+                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".DiracService"
-            android:enabled="true"
-            android:stopWithTask="false" />
 
         <service
             android:name=".tile.CorvusPartsTile"
@@ -81,22 +72,7 @@
         </service>
 
         <service
-            android:name=".FPSInfoService"
-            android:exported="false">
-        </service>
-        <service
-            android:name=".tile.FPSTileService"
-            android:icon="@drawable/ic_fps_info"
-            android:label="@string/fps_info_title"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action
-                    android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service>
-
-        <service
-            android:name=".LogTile"
+            android:name=".log.LogTile"
             android:icon="@drawable/ic_qs_log"
             android:label="@string/quick_settings_log_tile_label"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
