CrvsParts: add back fps also clean up

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -81,5 +81,9 @@
                     android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
         </service>
+        <service
+            android:name=".FPSInfoService"
+            android:exported="false">
+        </service>
     </application>
 </manifest>
