CrvsParts: Added selinux switch *https://github.com/DerpLab/platform_packages_apps_DerpQuest/commit/65f48a63a8e43ca041462a9c2280435ad15779a6 *https://github.com/DerpLab/platform_packages_apps_DerpQuest/commit/9c660381c80cfa02ba896a04dbb0c885d1766780 *https://github.com/DerpLab/platform_packages_apps_DerpQuest/commit/9e42f8e9c9a61758471a63796a4080ca77726dd9 *https://github.com/DerpLab/platform_packages_apps_Settings/commit/163bb69b141c41dc072131eb92c8dd9ee559a57c

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,17 @@
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".OnBoot"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".DeviceSettingsActivity"
             android:label="@string/corvus_parts_title">
