--- a/CorvusParts/AndroidManifest.xml
+++ b/CorvusParts/AndroidManifest.xml
@@ -76,6 +76,12 @@
                     android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
         </service>
+
+        <service
+            android:name=".DiracService"
+            android:enabled="true"
+            android:stopWithTask="false" />
+
         <service
             android:name=".FPSInfoService"
             android:exported="false">
