--- a/CorvusParts/AndroidManifest.xml
+++ b/CorvusParts/AndroidManifest.xml
@@ -86,5 +86,16 @@
             android:name=".FPSInfoService"
             android:exported="false">
         </service>
+
+        <service
+            android:name=".tile.FPSTileService"
+            android:icon="@drawable/ic_fps_info"
+            android:label="@string/fps_info_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
     </application>
 </manifest>
