CrvsParts: Update fps info & clean up

--- a/CorvusParts/AndroidManifest.xml
+++ b/CorvusParts/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </activity>
 
         <service
-            android:name=".tile.CorvusPartsTile"
+            android:name=".CorvusPartsTile"
             android:enabled="true"
             android:icon="@drawable/ic_corvus_parts"
             android:label="@string/corvus_parts_title"
@@ -83,12 +83,12 @@
             android:stopWithTask="false" />
 
         <service
-            android:name=".FPSInfoService"
+            android:name=".fps.FPSInfoService"
             android:exported="false">
         </service>
 
         <service
-            android:name=".tile.FPSTileService"
+            android:name=".fps.FPSTileService"
             android:icon="@drawable/ic_fps_info"
             android:label="@string/fps_info_title"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
