--- a/CorvusParts/AndroidManifest.xml
+++ b/CorvusParts/AndroidManifest.xml
@@ -89,7 +89,7 @@
 
         <service
             android:name=".fps.FPSTileService"
-            android:icon="@drawable/ic_fps_info"
+            android:icon="@drawable/ic_fps_tile"
             android:label="@string/fps_info_title"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
