--- a/CorvusParts/AndroidManifest.xml
+++ b/CorvusParts/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
 
         <activity
-            android:name=".kcal.KCalSettingsActivity"
+            android:name=".kcal.KcalSettingsActivity"
             android:excludeFromRecents="true"
             android:exported="false"
             android:theme="@style/CustomOptionsTheme"
